src/Pages/Skills.module.css
*{
    margin: 0;
    padding: 0;
}

.skillsMain{
    display:flex;
    flex-direction: column;
    background-color: black;
    align-items: center;
    overflow-x: hidden; /* Hide horizontal overflow */
    overflow-y: hidden; /* Hide vertical overflow */
 
    
}

.wDevelopment{
    display: flex;
    gap: 1em;
    align-items: center;
    justify-content: center;
    
}

.skillsSection{
    display: flex;
    background-color: black;
    justify-content: center;
    align-items: center;
    flex:1;
    padding: 3em;
    height: auto;
}





.skillsContent{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    padding-bottom: 4em;
    color: white;
    flex-direction: column;
    height:70vh;
    overflow-y: auto;
    width: 100%;
  
}

.title{
    margin: 1.2em;
    padding: 1em;
    color: white;
    
    padding-top:8em
}

.skillsButton button{
    padding: 0.8rem;
    border-radius: 10px;
    background-color: black;
    border:none;
    flex:none;
    color: white;

}

.skillsButton{
    display: flex;
    justify-content: center;
    align-items: center;
    
}

.skillsButton button:hover
{
    background-color: white;
    color: black;


}

.skillsButton .active {
    background-color: white;
    color: black;

    font-weight: bold;
    
  }

.description{
    background-color: black;
    color: black;
    padding: 5em 5em 5em 5em;
    display: flex;
    border-radius: 0 0 10px 10px;
    align-items: center;
    justify-content: center;
}

.description p{
    line-height: 1.6;
    color: white;
}

.skills{
    width: 100%;
    overflow-y: hidden;
}

@media (max-width: 1200px) {
    .skillsSection{
        /* margin-top: 5em; */
        flex-direction: column;
        padding-bottom: 5em;
        align-items: center;
        justify-content: center;
   
    }

    

    .skills{
        margin-top: 3em;
    }
    .title{
        padding-bottom: 4em;
    }
  
}



.logos img{
    height: 4em;
    padding: 1.2em;
    border: white solid;
    border-radius: 25px;
    width: 4em;
  
    
}



.logos{
    display: flex;
    gap:2.5em;
    align-items: center;
    justify-content: center;


}

.description{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}


.descriptionSkills{
    padding-bottom: 3.2em;
    color: white;
}


.imageSection .imageBackground{
    background-color: rgba(148, 147, 147, 0.3);
    border-radius: 50%;
    padding: 4em;
    
  
}


@media (max-width: 500px) {
    .logos img{
        height: 2em;
        padding: 1.2em;
        border: white solid;
        border-radius: 25px;
        width: 2em;
      
        
    }

    
    
    
 
  
}

@media (max-width: 767px) {
    .logos img{
        height: 2em;
        padding: 1.2em;
        border: white solid;
        border-radius: 25px;
        width: 2em;
      
        
    }

    .imageSection img{
        height: 250px;
        width: auto;
    }

    .skillsButton button {
        font-size: 0.7em;
   
    }
  
    
   
  
}


@media (min-width: 767px) {
    .logos img:hover{
        height:5.5em;
        width: 5.5em;
    }
  
}

@media (max-width: 590px) {
    .fR {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap:1em;
    }

    .sR{
        display: flex;
        flex-direction: column;
        align-items: center;
        gap:1em;
    }
}

